Refactored mod name

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.16.7
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=net.steakboi.tutorialmod
-archives_base_name=tutorialmod
+maven_group=net.steakboi.strongermobs
+archives_base_name=strongermobs
 
 # Dependencies
 fabric_version=0.105.0+1.21.1
