Added owo config

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
+owo.handshake.disable=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
@@ -15,3 +16,4 @@ archives_base_name=strongermobs
 
 # Dependencies
 fabric_version=0.105.0+1.21.1
+owo_version=0.12.15+1.21
